more progress, now building tests