@@ -2,6 +2,8 @@ version = "1.0.0"
 
 dependencies {
   api(project(":components:core"))
+  api(project(":components:animation"))
+  api(project(":components:sound"))
 }
 
 javafx {
@@ -24,9 +26,29 @@ publishing {
 tasks {
   task<JavaExec>("storyboardTest") {
     dependsOn(compileKotlin, compileTestKotlin)
+    setupJavaFx(this)
 
     group = "Execution"
     description = "Tests the StoryBoardEngine"
     mainClass.set("org.storm.storyboard.StoryBoardEngineTest")
+  }
+}
+
+fun setupJavaFx(exec: JavaExec) {
+  exec.doFirst {
+    // Setup our class paths
+    sourceSets.main.configure {
+      exec.classpath(this.runtimeClasspath.asPath)
+    }
+    sourceSets.test.configure {
+      exec.classpath(this.runtimeClasspath.asPath)
+    }
+
+    // For some reason tasks are ignored by the JavaFx Plugin (because why not) so we have to
+    // do what the plugin does ourselves
+    exec.jvmArgs = listOf(
+      "--module-path", exec.classpath.asPath,
+      "--add-modules", "javafx.graphics,javafx.media"
+    )
   }
 }
